@@ -1,0 +1,5 @@
+
+print.qlcalendar <- function(x, ...) {
+    cat("<qlcalendar object for '", getName(x), "'>\n", sep="")
+    invisible(x)
+}
