@@ -8,7 +8,11 @@
 #include "qlcal_declarations.h"
 #include "qlcal_as_wrap.h"
 
+// [[Rcpp::interfaces(r, cpp)]]
+
 namespace ql = QuantLib;
+
+extern QlCal::CalendarContainer gblcal;
 
 template <typename T> Rcpp::XPtr<T> make_xptr(T* p) {
     return Rcpp::XPtr<T>(p);
@@ -46,4 +50,35 @@ bool isBusinessDate(Rcpp::Nullable<Rcpp::Date> date = R_NilValue,
         cal = calct.getCalendar();
     }
     return cal.isBusinessDay(qd);
+}
+
+//' Get calendar name or id
+//'
+//' This function returns the corresponding (full) name (as in the underlying
+//' implementationclass) or identification string (used to select it) of the
+//' current calendar.
+//'
+//' @title Get calendar name, or id
+//' @return A string with the calendar name
+//' @examples
+//' getName()
+// [[Rcpp::export]]
+std::string getName(Rcpp::Nullable<Rcpp::XPtr<QlCal::CalendarContainer>> xp = R_NilValue) {
+    if (xp.isNotNull()) {
+        Rcpp::XPtr<QlCal::CalendarContainer> p = Rcpp::XPtr<QlCal::CalendarContainer>(xp);
+        return p->getName();
+    } else {
+        return gblcal.getName();
+    }
+}
+
+//' @rdname getName
+// [[Rcpp::export]]
+std::string getId(Rcpp::Nullable<Rcpp::XPtr<QlCal::CalendarContainer>> xp = R_NilValue) {
+    if (xp.isNotNull()) {
+        Rcpp::XPtr<QlCal::CalendarContainer> p = Rcpp::XPtr<QlCal::CalendarContainer>(xp);
+        return p->getId();
+    } else {
+        return gblcal.getId();
+    }
 }
